<resources>
    <string name="app_name">WeatherApp</string>
    <string name="pick_location">Pick Location</string>
    <string name="choosedLocation">Choosed location</string>
    <string name="locationDenied">App can\'t get your location please go to settings and enable it</string>
    <string name="allowLocation">Please allow access to your location to get near by</string>
    <string name="done">Done</string>
    <string name="addBookmark">Add Bookmark</string>
    <string name="bookmarkName">Bookmark Name</string>
    <string name="no_name_provided">Please enter a valid name</string>
    <string name="no_location_provide">Please select a location</string>
    <string name="baseUrl">http://api.openweathermap.org/data/2.5</string>
    <string name="defaultCity">London</string>
    <string name="locationFail">Sorry couldn\'t obtain your location</string>
    <string name="userLocation">Current location</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="sun">Sun</string>
    <string name="grass">Grass</string>
    <string name="sky">Sky</string>
    <string name="clock">Clock</string>
    <string name="hour">Hour Hand</string>
    <string name="image_transition_name">banner</string>
    <string name="tempTransitionName">tempTransition</string>
    <string name="tempWithUnit">%s\u00B0</string>
    <string name="rainVolume">%.2f mm</string>
    <string name="windSpeed">%.2f m/s</string>
    <string name="humidity">%d %%</string>
    <string name="NA">N/A</string>
    <string name="minMax">%1$s\u00B0/%2$s\u00B0</string>
    <string name="Celsius">Celsius</string>
    <string name="Fahrenheit">Fahrenheit</string>
    <string name="Temp">Temperature</string>
    <string name="units">Units</string>
    <string name="bookmarkSorting">Sorting</string>
    <string name="bookmarkSort">Sort Bookmarks</string>
    <string name="Ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="about">About</string>
    <string name="aboutApp">About App</string>
    <string name="settings">Settings</string>
</resources>
