<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/settingTitle"
                android:text="@string/units"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/smallMargin"
                android:id="@+id/tempGroup"
                android:padding="@dimen/smallMargin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Temp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/celsius"
                    android:checked="true"
                    android:text="@string/Celsius"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fahrenheit"
                    android:text="@string/Fahrenheit"/>

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/text_secondary"
                android:layout_marginBottom="@dimen/fab_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/settingTitle"
                android:text="@string/bookmarkSorting"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/smallMargin"
                android:id="@+id/sortGroup"
                android:padding="@dimen/smallMargin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bookmarkSort"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/descending"
                    android:checked="true"
                    android:text="@string/descending"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ascending"
                    android:text="@string/Ascending"/>

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/text_secondary"
                android:layout_marginBottom="@dimen/fab_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/settingTitle"
                android:text="@string/about"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/smallMargin"
                android:layout_height="wrap_content"
                android:id="@+id/aboutAppBtn"
                android:text="@string/aboutApp"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</FrameLayout>